# tohovgs4-android

./: .gitignore  README.md  build.gradle  privacy.html  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/debug/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: songlist.json
app/src/main/assets/compat/: GSLOT000.CHR  GSLOT255.CHR
app/src/main/cpp/: android_fopen.c  android_fopen.h  jni.cpp  vgs2tone.c  vgsdec.c  vgsdec.h  vgsdec_internal.h  vgsmml.c  vgsmml.h  vgstone.h
app/src/main/cpp/compat/: audio.hpp  game.c  vge.h  vgeapi.c  vgeapi.h  vgeint.h  vgs.c
app/src/main/res/anim/: slide_in_from_left.xml  slide_in_from_right.xml
app/src/main/res/drawable/: bottom_menu_selected.xml  bottom_menu_state.xml  bottom_menu_unselected.xml  button.xml  button_disabled.xml  card.xml  card_locked.xml  dialog_bg.xml  ic_badge.xml  ic_baseline_apps_24.xml  ic_baseline_close_24.xml  ic_baseline_density_small_24.xml  ic_baseline_home_24.xml  ic_baseline_pause_circle_outline_24.xml  ic_baseline_play_circle_filled_24.xml  ic_baseline_shuffle_24.xml  ic_footer_all.xml  ic_footer_home.xml  ic_footer_retro.xml  ic_footer_settings.xml  ic_footer_shuffle.xml  ic_label_pause.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_like_off.xml  ic_like_on.xml  transparent_button.xml
app/src/main/res/layout/: activity_main.xml  fragment_added_songs.xml  fragment_album_pager.xml  fragment_all_pager.xml  fragment_edit_favorites.xml  fragment_playback_settings.xml  fragment_retro.xml  fragment_settings.xml  (+6 more)
(+31 files in other folders)
